Last commit in User

--- a/UserBDD_Bootcamp/src/test/resources/global.properties
+++ b/UserBDD_Bootcamp/src/test/resources/global.properties
@@ -4,9 +4,9 @@ username=Numpy@gmail.com
 password=api@123
 test.data.path=src/test/resources/data/
 invalidendpoint=/updateusers/6359
-existing=/updateuser/8836
-invalidmethod=/updateuser/8836
-invaliddata=/updateuser/8836
+existing=/updateuser/10337
+invalidmethod=/updateuser/10337
+invaliddata=/updateuser/10337
 postinvalidendpoint=/createuser
 postinvaliddata=/createusers
 postinvalidmethod=/createusers
@@ -15,5 +15,5 @@ getinvaliduserId=/user/1233444
 getinvalidusername=/user/ananaA122
 deleteinvaliduserId=/deleteuser/12334AA
 deleteinvalidusername=/deleteuser/username/ananaA122
-schemapathpost=src/test/resources/schemas/createuserSchema.json
-schemapathput=src/test/resources/schemas/updateuserSchema.json
+schemapathpost=src/test/resources/schemas/createuserSchema.txt
+schemapathput=src/test/resources/schemas/updateuserSchema.txt
